# dagster-university

./: README.md  pyproject.toml
dagster_university/dagster_university/assets/: metrics.py  trips.py
dagster_university/data/outputs/: trips_by_week.csv
dagster_university/data/staging/: manhattan_stats.geojson
