[tool.poetry]
name = "crlough-dagster-uni"
version = "0.1.0"
description = "dagster university"
authors = ["Connor <flocka_birdz@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = ">=1.4,<2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"