[tool.poetry]
name = "crlough-dagster-uni"
version = "0.1.0"
description = "dagster university"
authors = ["Connor <flocka_birdz@pm.me>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dagster = ">=1.4,<2.0"
dagster-cloud = "^1.5.5"
dagster-duckdb = "^0.21.5"
geopandas = "^0.14.0"
kaleido = "0.2.1"
pandas = "^2.1.2"
plotly = "^5.18.0"
shapely = "^2.0.2"
urllib3 = "^1.26.15"
requests-toolbelt = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
dagster-webserver = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_university"

[tool.ruff]
extend = "../../pyproject.toml"

extend-ignore = [

  # (Unused import): We stub some files with just imports to help people get started
  "F401",    
  # (Import block is un-sorted or un-formatted): It's more important that we introduce the imports in the order they're used rather than alphabetically.
  "I001",
]